# Self-Driving-Car

./: C:\Users\UJSCRQU\OneDrive-Deere&Co\OneDrive - Deere & Co\Desktop\Cursos\The-Complete-Self-Driving-Car-Course\The Complete Self Driving Car Course - Udemy\Perceptron  Deep_neural_network.ipynb  LinetrackerV5_motores.py  Multiclass.ipynb  README.md  logistic_regression.ipynb  pyproject.toml
Code/RoboChallenge_2021/: utilitis.py
Components/: README.md
Components/3D - printing/: from random import randint.py
Components/Acelerometer/: README.md
Costs/: Costs.xlsx
Numpy Crash Course/: learning_np.py  numpy.ipynb
PIA SDV/: LinetrackerV5_motores.py  lineTrackerAlgorithm.py
PIA_Sistemas_Vision/: README.md  lineTrackerAlgorithm.py  main.py  motors.py  off_motors.py
Python Crash Curse/: Python Crash curse.ipynb
Python Crash Curse/.ipynb_checkpoints/: Python Crash curse-checkpoint.ipynb
The Complete Self Driving Car Course - Udemy/Computer_Vision_Finding_Lane_Lines/: functions.py  image.py  main.py
The Complete Self Driving Car Course - Udemy/Keras/: predictions.ipynb
The Complete Self Driving Car Course - Udemy/Perceptron/: logistic_regression.ipynb
The Complete Self Driving Car Course - Udemy/Python Crash Curse/: Python Crash curse.ipynb
scripts/RoboChallenge_2021/: Lane.py
scripts/Tests/: accelerometer.py  camera.py
