[tool.poetry]
name = "self-driving-car"
version = "0.1.0"
description = ""
authors = ["Cornelio Posadas P <posadascornelio38@gmail.com>"]
readme = "README.md"
packages = [{include = "self_driving_car"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
